--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
         </div>
         <button class="ac" onclick="ac()">Ac</button>
         <button class="del" onclick="del()">Del</button>
-        <button class="val">%</button>
-        <button class="val">/</button>
+        <button class="val operator">%</button>
+        <button class="val operator">/</button>
         <button class="val">1</button>
         <button class="val">2</button>
         <button class="val">3</button>
-        <button class="val">*</button>
+        <button class="val operator">*</button>
         <button class="val">4</button>
         <button class="val">5</button>
         <button class="val">6</button>
-        <button class="val">-</button>
+        <button class="val operator">-</button>
         <button class="val">7</button>
         <button class="val">8</button>
         <button class="val">9</button>
-        <button class="val">+</button>
+        <button class="val operator">+</button>
         <button class="val">00</button>
         <button class="val">0</button>
-        <button class="val">.</button>
+        <button class="val dot">.</button>
         <button class="equal" onclick="equal()">=</button>
     </div>
     
